--- a/django_admin3/templates/accounts/login.html
+++ b/django_admin3/templates/accounts/login.html
@@ -25,7 +25,7 @@
     <div class="card-body login-card-body">
       <p class="login-box-msg">Sign in to start your session</p>
 
-      <form action="../../index3.html" method="post">
+      <form action="#" method="post">
         <div class="input-group mb-3">
           <input type="email" class="form-control" placeholder="Email">
           <div class="input-group-append">
@@ -53,7 +53,7 @@
           </div>
           <!-- /.col -->
           <div class="col-4">
-            <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+            <a href="{% url 'dashboard:v1' %}"><button type="button" class="btn btn-primary btn-block">Sign In</button></a>
           </div>
           <!-- /.col -->
         </div>
