--- a/django_admin3/templates/dashboard/index.html
+++ b/django_admin3/templates/dashboard/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
+{% block title %}AdminLTE 3 | Dashboard{% endblock title %}
 {% block content %}
-{% block title %}AdminLTE 3 | Dashboard{% endblock %}
 <div class="container-fluid">
     <!-- Small boxes (Stat box) -->
     <div class="row">
