--- a/django_admin3/templates/snippets/files-js.html
+++ b/django_admin3/templates/snippets/files-js.html
@@ -32,3 +32,5 @@ $.widget.bridge('uibutton', $.ui.button)
 <script src="{% static 'dist/js/demo.js' %}"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="{% static 'dist/js/pages/dashboard.js' %}"></script>
+<script src="{% static 'dist/js/pages/dashboard2.js' %}"></script>
+<script src="{% static 'dist/js/pages/dashboard3.js' %}"></script>
