--- a/django_admin3/templates/snippets/files-css.html
+++ b/django_admin3/templates/snippets/files-css.html
@@ -19,3 +19,4 @@
 <link rel="stylesheet" href="{% static 'plugins/daterangepicker/daterangepicker.css">
 <!-- summernote -->
 <link rel="stylesheet" href="{% static 'plugins/summernote/summernote-bs4.min.css' %}">
+<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
