--- a/django_admin3/templates/snippets/sidebar.html
+++ b/django_admin3/templates/snippets/sidebar.html
@@ -65,7 +65,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a href="pages/widgets.html" class="nav-link">
+            <a href="{% url 'dashboard:widgets' %}" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Widgets
