--- a/django_admin3/templates/snippets/sidebar.html
+++ b/django_admin3/templates/snippets/sidebar.html
@@ -73,6 +73,14 @@
               </p>
             </a>
           </li>
+          <li class="nav-item">
+            <a href="{% url 'chart:chartjs' %}" class="nav-link">
+              <i class="nav-icon fas fa-chart-pie"></i>
+              <p>
+                Chart
+              </p>
+            </a>
+          </li>
         </ul>
       </nav>
       <!-- /.sidebar-menu -->
