charts done, page title done

--- a/django_admin3/templates/base.html
+++ b/django_admin3/templates/base.html
@@ -20,11 +20,16 @@
 
 
   <!-- Content Wrapper. Contains page content -->
-  <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    {% include 'snippets/breadcrumb.html' %}
-    <!-- /.content-header -->
-
+    <div class="content-wrapper">
+      <div class="content-header">
+        <div class="container-fluid">
+            <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1 class="m-0">{% block page_name %}{% endblock %}</h1>
+            </div><!-- /.col -->
+            </div><!-- /.row -->
+        </div><!-- /.container-fluid -->
+    </div>
     <!-- Main content -->
     <section class="content">
         {% block content %}
