--- a/django_admin3/templates/dashboard/dashboard-v3.html
+++ b/django_admin3/templates/dashboard/dashboard-v3.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}AdminLTE 3 | Dashboardv3{% endblock title %}
+{% block page_name %}Dashboard-v3{% endblock %}
 {% block content %}
 <div class="container-fluid">
     <div class="row">
