--- a/django_admin3/templates/dashboard/index.html
+++ b/django_admin3/templates/dashboard/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}AdminLTE 3 | Dashboard{% endblock title %}
+{% block page_name %}Dashboard-v1{% endblock %}
 {% block content %}
 <div class="container-fluid">
     <!-- Small boxes (Stat box) -->
