--- a/django_admin3/templates/dashboard/widgets.html
+++ b/django_admin3/templates/dashboard/widgets.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}AdminLTE 3 | widgets{% endblock title %}
+{% block page_name %}Widgets{% endblock %}
 {% block content %}
 <section class="content">
     <div class="container-fluid">
