--- a/django_admin3/templates/chart/chartjs.html
+++ b/django_admin3/templates/chart/chartjs.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}AdminLTE 3 | Dashboardv3{% endblock title %}
+{% block title %}AdminLTE 3 | Charts{% endblock title %}
+{% block page_name %}Charts{% endblock %}
 {% block content %}
 <div class="container-fluid">
     <div class="row">
