--- a/django_admin3/templates/dashboard/dashboard-v2.html
+++ b/django_admin3/templates/dashboard/dashboard-v2.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}AdminLTE 3 | DashboardV2{% endblock title %}
+{% block page_name %}Dashboard-v2{% endblock %}
 {% block content %}
 <div class="container-fluid">
     <!-- Info boxes -->
